0.6/_sources/checks_gallery/tabular/index.rst.txt
:orphan:



.. _sphx_glr_checks_gallery_tabular:

================
Tabular Checks
================

.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_distribution:

Data Distribution
===================


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the tabular prediction drift ch...">

.. only:: html

 .. figure:: /checks_gallery/tabular/distribution/images/thumb/sphx_glr_plot_train_test_prediction_drift_thumb.png
     :alt: Train Test Prediction Drift

     :ref:`sphx_glr_checks_gallery_tabular_distribution_plot_train_test_prediction_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/distribution/plot_train_test_prediction_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the whole dataset drift check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/distribution/images/thumb/sphx_glr_plot_whole_dataset_drift_thumb.png
     :alt: Whole Dataset Drift

     :ref:`sphx_glr_checks_gallery_tabular_distribution_plot_whole_dataset_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/distribution/plot_whole_dataset_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Train Test Label Drift">

.. only:: html

 .. figure:: /checks_gallery/tabular/distribution/images/thumb/sphx_glr_plot_train_test_label_drift_thumb.png
     :alt: Train Test Label Drift

     :ref:`sphx_glr_checks_gallery_tabular_distribution_plot_train_test_label_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/distribution/plot_train_test_label_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding feature drift check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/distribution/images/thumb/sphx_glr_plot_train_test_feature_drift_thumb.png
     :alt: Train Test Feature Drift

     :ref:`sphx_glr_checks_gallery_tabular_distribution_plot_train_test_feature_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/distribution/plot_train_test_feature_drift
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_integrity:

Data Integrity
==============


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This page provides an overview for using and understanding the &quot;String Mismatch&quot; check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_string_mismatch_thumb.png
     :alt: String Mismatch

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_string_mismatch.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_string_mismatch

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mixed Nulls">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_mixed_nulls_thumb.png
     :alt: Mixed Nulls

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_mixed_nulls.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_mixed_nulls

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Is Single Value">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_is_single_value_thumb.png
     :alt: Is Single Value

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_is_single_value.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_is_single_value

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This page provides an overview for using and understanding the &quot;String Mismatch Comparison&quot; che...">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_string_mismatch_comparison_thumb.png
     :alt: String Mismatch Comparison

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_string_mismatch_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_string_mismatch_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_dominant_frequency_change_thumb.png
     :alt: Dominant Frequency Change

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_dominant_frequency_change.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_dominant_frequency_change

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the Outlier Sample Detection ch...">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_outlier_sample_detection_thumb.png
     :alt: Outlier Sample Detection

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_outlier_sample_detection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_outlier_sample_detection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="String Length Out Of Bounds">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_string_length_out_of_bounds_thumb.png
     :alt: String Length Out Of Bounds

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_string_length_out_of_bounds.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_string_length_out_of_bounds

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Label">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_new_label_train_test_thumb.png
     :alt: New Label

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_new_label_train_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_new_label_train_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Category">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_category_mismatch_train_test_thumb.png
     :alt: New Category

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_category_mismatch_train_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_category_mismatch_train_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the conflicting labels check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_conflicting_labels_thumb.png
     :alt: Conflicting Labels

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_conflicting_labels.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_conflicting_labels

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the data duplicates check:">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_data_duplicates_thumb.png
     :alt: Data Duplicates

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_data_duplicates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_data_duplicates

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Special Characters">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_special_chars_thumb.png
     :alt: Special Characters

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_special_chars.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_special_chars

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mixed data types check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/integrity/images/thumb/sphx_glr_plot_mixed_data_types_thumb.png
     :alt: Mixed Data Types

     :ref:`sphx_glr_checks_gallery_tabular_integrity_plot_mixed_data_types.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/integrity/plot_mixed_data_types
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_methodology:

Methodology
===========


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Single Feature Contribution">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_single_feature_contribution_thumb.png
     :alt: Single Feature Contribution

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_single_feature_contribution.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_single_feature_contribution

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Identifier Leakage">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_identifier_leakage_thumb.png
     :alt: Identifier Leakage

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_identifier_leakage.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_identifier_leakage

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_train_test_samples_mix_thumb.png
     :alt: Train Test Samples Mix

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_train_test_samples_mix.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_train_test_samples_mix

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_unused_features_thumb.png
     :alt: Unused Features

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_unused_features.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_unused_features

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Datasets Size Comparison">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_datasets_size_comparison_thumb.png
     :alt: Datasets Size Comparison

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_datasets_size_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_datasets_size_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model Inference Time">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_model_inference_time_thumb.png
     :alt: Model Inference Time

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_model_inference_time.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_model_inference_time

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Index Leakage">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_index_leakage_thumb.png
     :alt: Index Leakage

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_index_leakage.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_index_leakage

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Single Feature Contribution...">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_single_feature_contribution_train_test_thumb.png
     :alt: Single Feature Contribution Train Test

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_single_feature_contribution_train_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_single_feature_contribution_train_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the boosting overfit check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_boosting_overfit_thumb.png
     :alt: Boosting Overfit

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_boosting_overfit.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_boosting_overfit

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Validation Leakage Overlap">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_date_train_test_leakage_overlap_thumb.png
     :alt: Date Train Validation Leakage Overlap

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_date_train_test_leakage_overlap.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_date_train_test_leakage_overlap

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Validation Leakage Duplicates">

.. only:: html

 .. figure:: /checks_gallery/tabular/methodology/images/thumb/sphx_glr_plot_date_train_test_leakage_duplicates_thumb.png
     :alt: Date Train Validation Leakage Duplicates

     :ref:`sphx_glr_checks_gallery_tabular_methodology_plot_date_train_test_leakage_duplicates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/methodology/plot_date_train_test_leakage_duplicates
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_overview:

Overview
========


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model Info">

.. only:: html

 .. figure:: /checks_gallery/tabular/overview/images/thumb/sphx_glr_plot_model_info_thumb.png
     :alt: Model Info

     :ref:`sphx_glr_checks_gallery_tabular_overview_plot_model_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/overview/plot_model_info

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Columns Info">

.. only:: html

 .. figure:: /checks_gallery/tabular/overview/images/thumb/sphx_glr_plot_columns_info_thumb.png
     :alt: Columns Info

     :ref:`sphx_glr_checks_gallery_tabular_overview_plot_columns_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/overview/plot_columns_info
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_performance:

Performance
===========



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Segment Performance">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_segment_performance_thumb.png
     :alt: Segment Performance

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_segment_performance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_segment_performance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Confusion Matrix Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_confusion_matrix_report_thumb.png
     :alt: Confusion Matrix Report

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_confusion_matrix_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_confusion_matrix_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_simple_model_comparison_thumb.png
     :alt: Simple Model Comparison

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_simple_model_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_simple_model_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Systematic Error">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_regression_systematic_error_thumb.png
     :alt: Regression Systematic Error

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_regression_systematic_error.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_regression_systematic_error

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_performance_report_thumb.png
     :alt: Performance Report

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_performance_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_performance_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the model error analysis check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_model_error_analysis_thumb.png
     :alt: Model Error Analysis

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_model_error_analysis.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_model_error_analysis

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="ROC Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_roc_report_thumb.png
     :alt: ROC Report

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_roc_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_roc_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Error Distribution">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_regression_error_distribution_thumb.png
     :alt: Regression Error Distribution

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_regression_error_distribution.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_regression_error_distribution

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration Score">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_calibration_score_thumb.png
     :alt: Calibration Score

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_calibration_score.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_calibration_score

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multi Model Performance Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/performance/images/thumb/sphx_glr_plot_multi_model_performance_report_thumb.png
     :alt: Multi Model Performance Report

     :ref:`sphx_glr_checks_gallery_tabular_performance_plot_multi_model_performance_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/performance/plot_multi_model_performance_report
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: tabular_python.zip </checks_gallery/tabular/tabular_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: tabular_jupyter.zip </checks_gallery/tabular/tabular_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
